ADD specializations, roles
